--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_nodl
-	previous = 
-	base = 5a7849f
+	previous = 5a7849f
+	base = f4032fb
 	trim = 
 	trimbase = 
